--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon app.js",
     "babel-node": "babel-node",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "migrate": "migrate-mongo -f migrate-mongo-config.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "migrate-mongo": "^6.0.2",
     "mongoose": "^5.7.1",
     "swagger-jsdoc": "^3.4.0",
     "swagger-ui-express": "^4.1.1"
