--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js",
-    "babel-node": "babel-node",
-    "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
-    "prepublishOnly": "npm run build",
-    "migrate": "migrate-mongo -f migrate-mongo-config.js"
+    "dev": "migrate-mongo up && nodemon app.js",
+    "migrate:down": "migrate-mongo down",
+    "migrate:up": "migrate-mongo up"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-validator": "^6.2.0",
     "migrate-mongo": "^6.0.2",
     "mongoose": "^5.7.1",
     "swagger-jsdoc": "^3.4.0",
