--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
+    "jsonwebtoken": "^8.5.1",
     "migrate-mongo": "^6.0.2",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.1",
     "swagger-jsdoc": "^3.4.0",
     "swagger-ui-express": "^4.1.1"
