fixed refresh token

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "migrate-mongo up && nodemon app.js",
+    "migrate": "migrate-mongo -f migrate-mongo-config.js",
     "migrate:down": "migrate-mongo down",
     "migrate:up": "migrate-mongo up"
   },
