--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "migrate-mongo up && nodemon app.js",
+    "dev": "cross-env NODE_ENV=development concurrently \"nodemon src/app.js\" \"migrate-mongo up\"",
     "migrate": "migrate-mongo -f migrate-mongo-config.js",
-    "migrate:down": "migrate-mongo down",
-    "migrate:up": "migrate-mongo up"
+    "migrate:down": "cross-env NODE_ENV=development  migrate-mongo down",
+    "migrate:up": "cross-env NODE_ENV=development migrate-mongo up"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "concurrently": "^5.0.0",
+    "cross-env": "^6.0.3",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
@@ -23,7 +25,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.7.1",
     "swagger-jsdoc": "^3.4.0",
-    "swagger-ui-express": "^4.1.1"
+    "swagger-ui-express": "^4.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.0",
