--- a/.env.development
+++ b/.env.development
@@ -5,14 +5,14 @@ HOST=http://localhost
 PORT=5000
 
 #Db
-#DB_NAME=test_db
-#MONGO_URL=mongodb://localhost:27017
+DB_NAME=test_db
+MONGO_URL=mongodb://localhost:27017
 
 #DB_NAME=iss
 #MONGO_URL=mongodb://localhost:27017
 
-DB_NAME=test
-MONGO_URL=mongodb://db:27017
+#DB_NAME=test
+#MONGO_URL=mongodb://db:27017
 
 #MONGO_URL=mongodb+srv://Oleg:999666333@testcluster-sn45m.mongodb.net/test?retryWrites=true
 
