--- a/.env.production
+++ b/.env.production
@@ -6,8 +6,7 @@ PORT=5000
 
 #Db
 DB_NAME=test
-MONGO_URL=mongodb://localhost:27017
-#MONGO_URL=mongodb://db:27017
+MONGO_URL=mongodb://db:27017
 
 #Secret
 ACCESS_SECRET_KEY=!23N1']//
