--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,8 @@
 #host
-HOST=http://localhost
+HOST=http://ec2-18-216-79-131.us-east-2.compute.amazonaws.com
 
 #Port
-PORT=5000
+PORT=80
 
 #Db
 DB_NAME=test
