--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,6 @@
 #host
-HOST=http://ec2-18-216-79-131.us-east-2.compute.amazonaws.com
+#HOST=http://ec2-18-216-79-131.us-east-2.compute.amazonaws.com
+HOST=http://localhost
 
 #Port
 PORT=80
