--- a/.env.production.save
+++ b/.env.production.save
@@ -1,8 +1,6 @@
-
 #host
-HOST=http://ec2-18-216-79-131.us-east-2.compute.amazonaws.com
-
-#Port
+#HOST=http://ec2-18-216-79-131.us-east-2.compute.amazonaws.com
+Port
 PORT=80
 
 #Db
