--- a/.env.development
+++ b/.env.development
@@ -5,7 +5,8 @@ HOST=http://localhost
 PORT=5000
 
 #Db
-DB_NAME=test_db
+DB_NAME=test-69
+#DB_NAME=test_db
 MONGO_URL=mongodb://localhost:27017
 
 #DB_NAME=iss
