Fixed User scheme (refreshTokenList)

--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 
 #host
-HOST=http://localhost
-#HOST=http://ec2-18-216-79-131.us-east-2.compute.amazonaws.com
+#HOST=http://localhost
+HOST=http://ec2-18-216-79-131.us-east-2.compute.amazonaws.com
 
 #Port
 PORT=80
