--- a/.env.production
+++ b/.env.production
@@ -1,13 +1,13 @@
 
 #host
-HOST=http://localhost
-#HOST=http://ec2-18-216-79-131.us-east-2.compute.amazonaws.com
+#HOST=http://localhost
+HOST=http://ec2-18-216-79-131.us-east-2.compute.amazonaws.com
 
 #Port
 PORT=80
 
 #Db
-DB_NAME=test
+DB_NAME=test1
 MONGO_URL=mongodb://db:27017
 
 #Secret
