--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 
 #host
-#HOST=http://localhost
-HOST=http://ec2-52-14-210-85.us-east-2.compute.amazonaws.com
+HOST=http://localhost
+#HOST=http://ec2-52-14-210-85.us-east-2.compute.amazonaws.com
 
 #Port
 PORT=80
